cargo-features = ["strip"]

[package]
name = "vp-crypt"
version = "0.1.0"
edition = "2021"
description = "VandalProof encryption/decryption for an ArctixFox firmware"
authors = ["MG_REX"]

[dependencies]
rand = "0.4"
aes = "0.8.1"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "3.1.18", features = ["derive"] }

[profile.release]
symbols = "strip"
